--- a/src/index.css
+++ b/src/index.css
@@ -125,3 +125,16 @@ button:focus-visible {
     background-color: #f9f9f9;
   }
 }
+
+@media (min-width: 300px) {
+  .ocean-sunset {
+    background-image: url("./assets/images/ocean-sunset.jpg");
+    background-size: cover;
+    background-repeat: no-repeat;
+    min-height: 400px;
+    max-height: 400px;
+    flex-basis: calc(88% - 1rem);
+    padding: 6em 0 20px 0;
+    margin: 0.5em;
+  }
+}
